# jpeg_codec

./: .gitignore  CMakeLists.txt
include/: bmp_writer.h  dct.h  dct_fft.h  dct_impl.h  dct_schoolbook.h  dct_simd.h  dct_ssse3.h  decoder.h  ecs_bitstream.h  entropy_coded.h  huffman.h  marker.h  mmap.h  parser.h  quantize.h  util.h
scripts/: dct.py  parse.py  preview.py  view_dbgfile.py
src/: bmp_writer.cpp  dct.cpp  decoder.cpp  ecs_bitstream.cpp  huffman.cpp  main.cpp  mmap.cpp  parser.cpp
src/parser/: frame.cpp  main.cpp  scan.cpp
test/: bmp_writer.cpp  dct.cpp  dct_bench.cpp  dct_fft_bench.cpp  dct_simd.cpp  dct_simd_bench.cpp  dct_ssse3.cpp  dct_ssse3_bench.cpp  idct_1d_fft.cpp  idct_1d_schoolbook.cpp  idct_fft.cpp  idct_fft_bench.cpp  idct_schoolbook.cpp  idct_schoolbook_bench.cpp  idct_ssse3.cpp  idct_ssse3_bench.cpp  mmap.cpp  sse.cpp
